# PolarsVSPandasBenchmarking

./: .gitignore  README.md  benchmarking.ipynb  pyproject.toml  run_trials.py
notebooks/: benchmarking.ipynb
