[tool.poetry]
name = "polarsvspandasbenchmarking"
version = "0.1.0"
description = "Benchmark comparison of polars vs pandas"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.27"
pandas = "^2.2.2"
plotly = "^5.22.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
